# minweight_store_cpp

./: .gitignore  AGENTS.md  CMakeLists.txt  DESIGN.md  LICENSE  README.md  backend.go  backend_test.go  bitset.go  bitset_bench_test.go  bitset_test.go  bytes.go  bytes_bench_test.go  bytes_test.go  close_helper_test.go  close_test_helpers_test.go  compaction_dispatcher.go  crash_test.go  flush.go  flush_bench_test.go  flush_test.go  fs_clone_bench_test.go  fs_clone_darwin.go  fs_clone_linux.go  fs_utils.go  go.mod  go.sum  heap_node_store.go  heap_record_store.go  install_sst_replay_test.go  layout.go  logger.go  logger_test.go  major_compaction.go  major_compaction_bench_test.go  major_compaction_dispatcher.go  major_compaction_test.go  manifest.go  manifest_bench_test.go  manifest_test.go  (+34 more)
docs/: agents_read.md
docs/design/: cpp_porting_plan.md  cpp_repository_layout.md  index.md  minpatricia.md  minpatricia_go_ut_coverage.md  minpatricia_port_plan.md  minweight_store.md
docs/discuss/: index.md
docs/guides/: README.md
docs/skills/: README.md
docs/trackers/: resolved.md  todos.md
docs/worklogs/: 2026-06-01.md  2026-06-05.md  2026-06-07.md
kvbench/: .gitignore  README.md  go.mod  go.sum  kvbench_test.go  large_reuse_test.go  report.md
kvbench/cmd/kvbenchrun/: main.go  main_test.go
src/: CMakeLists.txt
src/minpatricia/: CMakeLists.txt  README.md  minpatricia.cc  minpatricia_bench.cc  minpatricia_test.cc
src/minpatricia/include/minpatricia/: byte_view.h  diff.h  index.h  minpatricia.h  node_page.h  node_store.h  position.h  record_store.h  status.h
src/minpatricia/testdata/: bench_keys_100K.tsv  bench_keys_10K.tsv  bench_keys_1K.tsv  gen_bench_fixtures.go  golden_diff_cases.tsv  golden_ops_small.tsv  golden_route_cases.tsv  golden_seek_cases.tsv
src/minweight_store/: CMakeLists.txt  README.md  store.cc  store_bench.cc  store_test.cc
src/minweight_store/include/minweight_store/: options.h  runtime.h  status.h  store.h
src/runtime/: CMakeLists.txt  README.md
src/storage/: CMakeLists.txt  README.md
third/: README.md
